// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlPreviewGroupView > renders a single preview 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="mx_LinkPreviewWidget_wrapImageCaption"
      >
        <button
          class="mx_LinkPreviewWidget_image"
        >
          <img
            alt=""
            class="thumbnail"
            src="/static/element.png"
          />
        </button>
        <div
          class="mx_LinkPreviewWidget_caption"
        >
          <div
            class="mx_LinkPreviewWidget_title"
          >
            <a
              href="https://matrix.org"
              rel="noreferrer noopener"
              target="_blank"
            >
              A simple title
            </a>
          </div>
          <div
            class="mx_LinkPreviewWidget_description"
          >
            A simple description
          </div>
        </div>
      </div>
      <button
        aria-label="Close preview"
        class="_icon-button_1215g_8 mx_LinkPreviewGroup_hide"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 20px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`UrlPreviewGroupView > renders multiple previews 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="mx_LinkPreviewWidget_wrapImageCaption"
      >
        <button
          class="mx_LinkPreviewWidget_image"
        >
          <img
            alt=""
            class="thumbnail"
            src="/static/element.png"
          />
        </button>
        <div
          class="mx_LinkPreviewWidget_caption"
        >
          <div
            class="mx_LinkPreviewWidget_title"
          >
            <a
              href="https://matrix.org"
              rel="noreferrer noopener"
              target="_blank"
            >
              One
            </a>
          </div>
          <div
            class="mx_LinkPreviewWidget_description"
          >
            Great description
          </div>
        </div>
      </div>
      <button
        aria-label="Close preview"
        class="_icon-button_1215g_8 mx_LinkPreviewGroup_hide"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 20px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="container"
    >
      <div
        class="mx_LinkPreviewWidget_wrapImageCaption"
      >
        <button
          class="mx_LinkPreviewWidget_image"
        >
          <img
            alt=""
            class="thumbnail"
            src="/static/element.png"
          />
        </button>
        <div
          class="mx_LinkPreviewWidget_caption"
        >
          <div
            class="mx_LinkPreviewWidget_title"
          >
            <a
              href="https://matrix.org"
              rel="noreferrer noopener"
              target="_blank"
            >
              Two
            </a>
          </div>
          <div
            class="mx_LinkPreviewWidget_description"
          >
            Another description
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="mx_LinkPreviewWidget_wrapImageCaption"
      >
        <button
          class="mx_LinkPreviewWidget_image"
        >
          <img
            alt=""
            class="thumbnail"
            src="/static/element.png"
          />
        </button>
        <div
          class="mx_LinkPreviewWidget_caption"
        >
          <div
            class="mx_LinkPreviewWidget_title"
          >
            <a
              href="https://matrix.org"
              rel="noreferrer noopener"
              target="_blank"
            >
              Three
            </a>
          </div>
          <div
            class="mx_LinkPreviewWidget_description"
          >
            One more description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UrlPreviewGroupView > renders multiple previews which are hidden 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="mx_LinkPreviewWidget_wrapImageCaption"
      >
        <button
          class="mx_LinkPreviewWidget_image"
        >
          <img
            alt=""
            class="thumbnail"
            src="/static/element.png"
          />
        </button>
        <div
          class="mx_LinkPreviewWidget_caption"
        >
          <div
            class="mx_LinkPreviewWidget_title"
          >
            <a
              href="https://matrix.org"
              rel="noreferrer noopener"
              target="_blank"
            >
              A simple title
            </a>
          </div>
          <div
            class="mx_LinkPreviewWidget_description"
          >
            A simple description
          </div>
        </div>
      </div>
      <button
        aria-label="Close preview"
        class="_icon-button_1215g_8 mx_LinkPreviewGroup_hide"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 20px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
            />
          </svg>
        </div>
      </button>
    </div>
    <button
      class="_button_13vu4_8"
      data-kind="tertiary"
      data-size="sm"
      role="button"
      tabindex="0"
    >
      Show 9 other previews
    </button>
  </div>
</div>
`;
